Fix search border on mobile

--- a/hellopeoria/styles/style.scss
+++ b/hellopeoria/styles/style.scss
@@ -155,6 +155,12 @@ header {
     @include rounded-corners;
     @include ease-transition;
 
+    @include mobile {
+      box-shadow: none;
+      border: 1px solid $light-gray;
+      margin-top: 10px;
+    }
+
     &:hover {
       box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.2);
     }
